--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,7 +2,7 @@
     background-color: blanchedalmond;
     color: black;
     text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', 'Arial', 'sans-serif';
 }
 
 header {
